Letter spacing fix

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,9 +1,16 @@
-@import "bootstrap"; // Import bootstrap
-@import "variables"; // Custom variables
-@import "forms"; // Custom forms
-@import "buttons";  // Custom buttons
-@import "modals";  // Custom Modals
-@import "mediaqueries"; // Custom Media Queries
+@import "bootstrap";
+// Import bootstrap
+@import "variables";
+// Custom variables
+@import "forms";
+// Custom forms
+@import "buttons";
+// Custom buttons
+@import "modals";
+// Custom Modals
+@import "mediaqueries";
+
+// Custom Media Queries
 
 html, body {
   background: url('../images/bgpattern.png') repeat;
@@ -123,5 +130,13 @@ html, body {
   }
   .last-name {
     float: left;
+  }
+
+  .app {
+    .intro {
+      h1 {
+        letter-spacing: normal;
+      }
+    }
   }
 }
